feat: stabilize admin auth and article import APIs